Added FeatureRenderingNode, completed FeatureConfigNode base functionality